Pushing a small change for testing..

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ Since I've used CVS and Subversion to collaborate on projects in the past, I'm g
 The current preferred solution is 'git', so I'll be using 'github' to manage my code.
 </p>
 
+<p>And if this is visible, then it's working!</p>
+
 <nav>
 	<ul>
 		<li>Home</li>
