Pushing small content update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@ Since I've used CVS and Subversion to collaborate on projects in the past, I'm g
 The current preferred solution is 'git', so I'll be using 'github' to manage my code.
 </p>
 
-<p>And if this is visible, then it's working!</p>
+<p>And if this is visible, then it's working!  Yup.  That's a good feeling.  So what we're doing is editing files locally, committing them to github, and pulling them down onto the server.
+That may seem excessive for a site that currently has 11 files, and does mean I need to spend about 20 minutes setting up Apache locally if I decide to use PHP for a back-end.  It also means I can track past revision online in my <a href="https://github.com/Delvach/ben-delvacchio">github repository</a>.</p>
+
 
 <nav>
 	<ul>
